# catepyller

./: .gitignore  README.md  TODO.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
catepyller/: operator.py  util.py
catepyller/data/: list.py  option.py  result.py
catepyller/functions/: monad.py  semigroup.py
catepyller/protocols/: __init__.py  context.py  context_2.py  has_empty.py  semigroup.py  sequence.py
examples/: lists.py
